# bzip2

./: .gitignore  CMakeLists.txt  README.md  bwt.cpp  bwt.hpp  circular_suffix_array.cpp  circular_suffix_array.hpp  haffman.cpp  move_to_front.cpp  move_to_front.hpp  testing.cpp
bzip2_lib/: CMakeLists.txt
bzip2_lib/headers/: bwt.hpp  bzip2.hpp  circular_suffix_array.hpp  huffman.hpp  move_to_front.hpp  reader_32_bit.hpp
bzip2_lib/sources/: bwt.cpp  bzip2.cpp  circular_suffix_array.cpp  huffman.cpp  move_to_front.cpp  reader_32_bit.cpp
google_tests/: CMakeLists.txt  tests.cpp
google_tests/generator/: random_generator.cpp  random_generator.h
google_tests/resources/decoded/: Forrest_Gump_Groom_Winston.txt
google_tests/resources/input/: Animal_farm_a_fairy_story_Orwell_George.txt
google_tests/resources/output/: Animal_farm_a_fairy_story_Orwell_George.txt  Forrest_Gump_Groom_Winston.txt  Leo_Tolstoy_War_and_Peace_ital.txt  Leo_Tolstoy_War_and_Peace_rus.txt  Osamu_Dazai_No_longer_human_jap.txt
